add ability to add license links to end of LOCItems

--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -61,19 +61,25 @@ Even though it’s been well over 50 years, Arai’s work has endured -- The Sea
     allowSave={false}
     image="/loc/seattle/arai/plans.jpg"
     linkOut="https://ddr.densho.org/ddr-densho-430-155/"
-    caption="Sketch of Seattle Betsuin Buddhist Temple street & floor plan. Courtesy of Arai and Kawaguchi Family Collection, Densho"
+    licenseText="Courtesy of Arai and Kawaguchi Family Collection, Densho"
+    licenseLink="https://creativecommons.org/licenses/by-nc-sa/4.0/"
+    caption="Sketch of Seattle Betsuin Buddhist Temple street & floor plan."
     alt=""/>
 <LOCItem
     allowSave={false}
     image="/loc/seattle/arai/stairs.png"
     linkOut="https://ddr.densho.org/ddr-densho-430-115/"
-    caption="Blueprints for entrance stairs for Betsuin Temple. Courtesy of Arai and Kawaguchi Family Collection, Densho"
+    licenseText="Courtesy of Arai and Kawaguchi Family Collection, Densho"
+    licenseLink="https://creativecommons.org/licenses/by-nc-sa/4.0/"
+    caption="Blueprints for entrance stairs for Betsuin Temple."
     alt=""/>
 <LOCItem
     allowSave={false}
     image="/loc/seattle/arai/wisteria.png"
+    licenseText="Courtesy of Arai and Kawaguchi Family Collection, Densho"
+    licenseLink="https://creativecommons.org/licenses/by-nc-sa/4.0/"
     linkOut="https://ddr.densho.org/ddr-densho-430-117/"
-    caption="Design of the wisteria crest that seals the entrance of the temple. Courtesy of Arai and Kawaguchi Family Collection, Densho"
+    caption="Design of the wisteria crest that seals the entrance of the temple."
     alt=""/>
 
 The Seattle Betsuin Buddhist Temple was the last project Arai completed before being forcibly interned at Minidoka in Idaho.
