changes to civic center story

--- a/src/app/content/sewy/civicCenter.mdx
+++ b/src/app/content/sewy/civicCenter.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO
+title: The East Side School
 locationTitle: Laramie Plains Civic Center
 address: 710 E Garfield St
 location: ["SEWY"] 
@@ -17,32 +17,32 @@ stickers: [{image: "/loc/sewy/civicCenter/schoolImage.png", linkOut: "https://ww
 
 When a new town gets started, there are a lot of things to do - figuring out things necessary for survival come first, like food, water, and shelter. However, in Laramie, education was also a high priority.
 
-Only a year after the town started coming together, the first school was built. At Third and Grand, it taught primary school to a student body of 40 people. It was short lived -- the school relied on donations for operation, and closed soon after it opened.
+Only a year after the town started coming together, the first school was built. At Third and Grand, it taught primary school to a student body of 40 people. It was short-lived -- the school relied on donations for operation, and closed soon after it opened.
 
 <ComicSection cols={9} rowHeight = "2rem" elements = {[
-    {type:"text", src:"For the first matter of business…", position:{col:2, row:1}, size:{width:3, height:2}, style:{outline:"bubble"}},
-    {type:"text", src:"It's time for us to commit to the education of our children. Because it is so important, we shouldn’t let it depend on donations.", position:{col:4, row:3}, size:{width:5, height:4}, style:{outline:"bubble"}},
+    {type:"text", src:"For the first matter of business…", alt:"A black and white comic illustration of a man in a top hat reading out an agenda to a crowd of meeting attendees.", position:{col:2, row:1}, size:{width:3, height:2}, style:{outline:"bubble"}},
+    {type:"text", src:"It's time for us to commit to the education of our children. Because it is so important, we shouldn’t let it depend on donations.", alt:"A black and white comic illustration of the same man in the bowler hat infront of a school building, with a large checkmark drawn next to the building.", position:{col:4, row:3}, size:{width:5, height:4}, style:{outline:"bubble"}},
     {type:"image", src:"/loc/sewy/civicCenter/meeting.png", position:{col:1, row:4}, size:{width:8, height:8}},
-    {type:"text", src:"Instead, let’s start a new tax levy, so that students are guarateed to have a classroom every year.", position:{col:3, row:11}, size:{width:5, height:3}, style:{outline:"bubble"}},
+    {type:"text", src:"Instead, let’s start a new tax levy, so that students are guaranteed to have a classroom every year.", position:{col:3, row:11}, size:{width:5, height:3}, style:{outline:"bubble"}},
     {type:"text", src:"Speaking of classrooms, the first thing we should do with the funds is to build a permanent school", position:{col:2, row:14}, size:{width:7, height:3}, style:{outline:"bubble"}},
     {type:"image", src:"/loc/sewy/civicCenter/school.png", position:{col:1, row:17}, size:{width:9, height:14}},
-    {type:"text", src:"We’re not going to stick students in random places anymore.", position:{col:2, row:29}, size:{width:5, height:3}, style:{outline:"bubble"}},
+    {type:"text", src:"We’re not going to stick students in random places anymore.", alt:"A black and white comic illustration of a school house building.", position:{col:2, row:29}, size:{width:5, height:3}, style:{outline:"bubble"}},
     {type:"text", src:"Hey, Stuart! Did you hear that?", position:{col:2, row:34}, size:{width:3, height:2}, style:{outline:"bubble"}},
     {type:"text", src:"We aren't doing that anymore", position:{col:3, row:37}, size:{width:3, height:2}, style:{outline:"bubble"}},
-    {type:"image", src:"/loc/sewy/civicCenter/intoTree.png", position:{col:4, row:31}, size:{width:6, height:14}},
+    {type:"image", src:"/loc/sewy/civicCenter/intoTree.png", alt:"A black and white comic illustration of Stuart placing a young boy into a tree.", position:{col:4, row:31}, size:{width:6, height:14}},
 ]}/>
 
-The Laramie Plains Civic Center is the oldest building still standing in Wyoming that was created for the purpose of being a school. Known as the East Side School, it was built in 1878, and taught students spanning all ages - from elementary school to high school.
+The Laramie Plains Civic Center (LPCC) is the oldest building still standing in Wyoming that was created for the purpose of being a school. Known as the East Side School, it was built in 1878, and taught students spanning all ages - from elementary school to high school.
 
 [ ITEM - WY DIGITAL COLLECTIONS] CAN WE USE? https://digitalcollections.uwyo.edu/luna/servlet/detail/uwydbuwy~96~96~3278798~289977:Group-of-pupils-on-North-steps%2C-Eas?sort=rid%2Ctitle%2Cdate_original%2Csource&qvq=q:Laramie%20East%20Side%20School;sort:rid%2Ctitle%2Cdate_original%2Csource;lc:uwydbuwy~190~190,uwydbuwy~63~63,uwydbuwy~114~114,uwydbuwy~89~89,uwydbuwy~179~179,uwydbuwy~158~158,uwydbuwy~2~2,uwydbuwy~144~144,uwydbuwy~68~68,uwydbuwy~94~94,uwydbuwy~106~106,uwydbuwy~181~181,uwydbuwy~191~191,uwydbuwy~125~125,uwydbuwy~55~55,uwydbuwy~82~82,uwydbuwy~53~53,uwydbuwy~189~189,uwydbuwy~124~124,uwydbuwy~3~3,uwydbuwy~95~95,uwydbuwy~168~168,uwydbuwy~192~192,uwydbuwy~109~109,uwydbuwy~11~11,uwydbuwy~79~79,uwydbuwy~108~108,uwydbuwy~142~142,uwydbuwy~7~7,uwydbuwy~101~101,uwydbuwy~20~20,uwydbuwy~207~207,uwydbuwy~30~30,uwydbuwy~150~150,uwydbuwy~166~166,uwydbuwy~66~66,uwydbuwy~205~205,uwydbuwy~99~99,uwydbuwy~204~204,uwydbuwy~57~57,uwydbuwy~38~38,uwydbuwy~209~209,uwydbuwy~198~198,uwydbuwy~1~1,uwydbuwy~130~130,uwydbuwy~149~149,uwydbuwy~193~193,uwydbuwy~71~71,uwydbuwy~188~188,uwydbuwy~40~40,uwydbuwy~43~43,uwydbuwy~123~123,uwydbuwy~86~86,uwydbuwy~93~93,uwydbuwy~83~83,uwydbuwy~4~4,uwydbuwy~52~52,uwydbuwy~96~96,uwydbuwy~36~36,uwydbuwy~81~81,uwydbuwy~50~50,uwydbuwy~116~116,uwydbuwy~120~120,uwydbuwy~21~21,uwydbuwy~208~208,uwydbuwy~163~163,uwydbuwy~172~172,uwydbuwy~134~134,uwydbuwy~37~37,uwydbuwy~17~17,uwydbuwy~132~132,uwydbuwy~91~91,uwydbuwy~194~194,uwydbuwy~84~84,uwydbuwy~153~153,uwydbuwy~143~143,uwydbuwy~58~58,uwydbuwy~159~159,uwydbuwy~177~177,uwydbuwy~156~156,uwydbuwy~196~196,uwydbuwy~98~98,uwydbuwy~76~76,uwydbuwy~27~27,uwydbuwy~54~54,uwydbuwy~202~202,uwydbuwy~121~121,uwydbuwy~8~8,uwydbuwy~111~111,uwydbuwy~195~195,uwydbuwy~85~85,uwydbuwy~147~147,uwydbuwy~72~72,uwydbuwy~160~160,uwydbuwy~197~197,uwydbuwy~42~42,uwydbuwy~131~131,uwydbuwy~118~118,uwydbuwy~173~173,uwydbuwy~67~67,uwydbuwy~16~16,uwydbuwy~74~74,uwydbuwy~161~161,uwydbuwy~171~171,uwydbuwy~60~60,uwydbuwy~14~14,uwydbuwy~187~187,uwydbuwy~169~169,uwydbuwy~28~28,uwydbuwy~5~5,uwydbuwy~6~6,ahcludwig~1~1,uwydbuwy~46~46,uwydbuwy~112~112,uwydbuwy~87~87,uwydbuwy~186~186,uwydbuwy~206~206,uwydbuwy~33~33,uwydbuwy~29~29,uwydbuwy~75~75,uwydbuwy~145~145,uwydbuwy~126~126,uwydbuwy~48~48,uwydbuwy~136~136,uwydbuwy~174~174,uwydbuwy~200~200,uwydbuwy~102~102,uwydbuwy~148~148,uwydbuwy~105~105,uwydbuwy~70~70,uwydbuwy~19~19,uwydbuwy~137~137,uwydbuwy~141~141,uwydbuwy~139~139,uwydbuwy~185~185,uwydbuwy~12~12,uwydbuwy~138~138,uwydbuwy~73~73,uwydbuwy~78~78,uwydbuwy~165~165,uwydbuwy~92~92,uwydbuwy~47~47,uwydbuwy~56~56,uwydbuwy~80~80,uwydbuwy~26~26,uwydbuwy~129~129,uwydbuwy~199~199,uwydbuwy~164~164,uwydbuwy~140~140,uwydbuwy~34~34,uwydbuwy~115~115,uwydbuwy~175~175,uwydbuwy~51~51,uwydbuwy~203~203,uwydbuwy~97~97,uwydbuwy~146~146,uwydbuwy~135~135,uwydbuwy~162~162,uwydbuwy~39~39,uwydbuwy~61~61,uwydbuwy~176~176,uwydbuwy~77~77,uwydbuwy~41~41,uwydbuwy~210~210,uwydbuwy~24~24,uwydbuwy~35~35,uwydbuwy~62~62,uwydbuwy~10~10,uwydbuwy~110~110,uwydbuwy~128~128,uwydbuwy~100~100,uwydbuwy~59~59,uwydbuwy~152~152,uwydbuwy~113~113,uwydbuwy~9~9,uwydbuwy~201~201,uwydbuwy~104~104,uwydbuwy~127~127,uwydbuwy~65~65,uwydbuwy~117~117,uwydbuwy~49~49,uwydbuwy~119~119,uwydbuwy~170~170,uwydbuwy~45~45,uwydbuwy~184~184,uwydbuwy~180~180,uwydbuwy~44~44,uwydbuwy~23~23,uwydbuwy~64~64,uwydbuwy~151~151,uwydbuwy~167~167,uwydbuwy~157~157,uwydbuwy~22~22,uwydbuwy~69~69,uwydbuwy~183~183,uwydbuwy~88~88,uwydbuwy~25~25,uwydbuwy~32~32,uwydbuwy~178~178,uwydbuwy~15~15,uwydbuwy~13~13,uwydbuwy~133~133,uwydbuwy~103~103,uwydbuwy~155~155,uwydbuwy~107~107,uwydbuwy~154~154,uwydbuwy~18~18,uwydbuwy~90~90,uwydbuwy~31~31,uwydbuwy~122~122&mi=13&trs=16
 
 The need for a second school building became apparent pretty quickly which resulted in the mirroring West Side School to be built in 1883. It grew to be a community hub, being the only public building in the area, and hosted many public events, such as health screenings, plays, and dances.
 
-Fifty years later, renovations were needed for both schools to expand, and architect Wilbur Hitchcock led the designs for both. He was a prolific architect in the region who built over 300 buildings and houses in Laramie alone despite his early death. Hitchcock studied and later taught at the University of Wyoming, and library he designed for campus, now the Aven Nelson Building, was named one of the 13 most beautiful libraries in the US.
+Fifty years later, renovations were needed for both schools to expand, and architect Wilbur Hitchcock led the designs for both. He was a prolific architect in the region who built over 300 buildings and houses in Laramie alone despite his early death. Hitchcock studied and later taught at the University of Wyoming, and the library he designed for campus, now the Aven Nelson Building, was named one of the 13 most beautiful libraries in the US.
 
-<LOCItem image="/loc/sewy/civicCenter/ad.jpg" type="newspaper" linkOut="https://www.loc.gov/resource/sn92066979/1912-07-17/ed-1/?sp=2&q=hitchcock&r=0.53,0.21,0.399,0.28,0"/>
-<LOCItem image="/loc/sewy/civicCenter/trip.jpg" type="newspaper" caption="Hitchcock travelled to the east coast to study the libraries there in preparation for the one he would design ." linkOut="https://www.loc.gov/resource/sn92066979/1921-12-14/ed-1/?sp=6&q=hitchcock&r=0.382,0.269,0.37,0.254,0"/>
-<LOCItem image="/loc/sewy/civicCenter/cooper.jpg" type="pnp" caption="other buildings in Laramie" linkOut="https://www.loc.gov/resource/highsm.32794/"/>
+<LOCItem image="/loc/sewy/civicCenter/ad.jpg" type="newspaper" caption="An newspaper advertisement for Hitchcock's services"linkOut="https://www.loc.gov/resource/sn92066979/1912-07-17/ed-1/?sp=2&q=hitchcock&r=0.53,0.21,0.399,0.28,0" alt="A close-up of a newspaper advertisement for Wilbur Hitchcock’s architectural services."/>
+<LOCItem image="/loc/sewy/civicCenter/trip.jpg" type="newspaper" caption="Hitchcock travelled to the east coast to study the libraries there in preparation for the one he would design ." linkOut="https://www.loc.gov/resource/sn92066979/1921-12-14/ed-1/?sp=6&q=hitchcock&r=0.382,0.269,0.37,0.254,0" alt="A newspaper article describing Wilbur Hitchcock’s trip to the East Coast to study library designs."/>
+<LOCItem image="/loc/sewy/civicCenter/cooper.jpg" type="pnp" caption="A Laramie residence built by Wilbur Hitchcock " linkOut="https://www.loc.gov/resource/highsm.32794/" alt="A color photograph of a two-story residential home designed by Hitchcock. The home is white, and has terracotta colored roof tiles and a large green lawn and driveway."/>
 
 In 1930, while visiting Los Angeles on his honeymoon, Hitchcock died in a car accident. The renovations of the high schools were still unfinished, and the project was picked up by his partner Walter E Ware.
 
