--- a/src/app/content/sewy/atlas.mdx
+++ b/src/app/content/sewy/atlas.mdx
@@ -34,7 +34,7 @@ When people from the entertainment industry came to see the new theatre, they sa
     {type:"image", src:"/loc/sewy/atlas/lights.png", alt:"A colorful comic close-up illustration of three lightbulbs in the Atlas Theatre brightly illuminating their surroundings.", position:{col:1, row:12}, size:{width:9, height:8}},
 ]}/>
 
-The Atlas Theatre boasted of a huge variety of shows, including a play featuring "President Roosvelt with his stick riding a horse that breathed fire from its eyes and mouth.", movies such as <i>The Four Horsemen</i>, and a production of "Civilization -- the Million Dollar Spectacle", which was advertised as "Far Greater than the 'Birth of a Nation'".
+The Atlas Theatre boasted of a huge variety of shows, including a play featuring "President Roosvelt with his stick riding a horse that breathed fire from its eyes and mouth.", movies such as *The Four Horsemen*, and a production of "Civilization -- the Million Dollar Spectacle", which was advertised as "Far Greater than the 'Birth of a Nation'".
 
 One of the most impressive things about the theatre is something that hangs inside it - the hand-painted asbestos grand drape that hangs at the front of the stage.
 
