--- a/src/app/content/sewy/depot.mdx
+++ b/src/app/content/sewy/depot.mdx
@@ -17,7 +17,7 @@ stickers: [{image: "/loc/sewy/depot/rollingMillsSticker.png", linkOut: "https://
 
 The Union Pacific Railroad's presence in Laramie has always been shifting. In 1868, the Union Pacific built the original depot and hotel to encourage rail travel and provide lodging for depot employees.
 
-In 1917, a spark from one of the engines on the nearby tracks started a fire that would eventually burn the hotel down. <i>The Laramie Republican</i>, reporting on the fire a day later, said that “It has been afire numerous times, but each time the fire was of little consequence and the repairs were quickly and easily made”.
+In 1917, a spark from one of the engines on the nearby tracks started a fire that would eventually burn the hotel down. *The Laramie Republican*, reporting on the fire a day later, said that “It has been afire numerous times, but each time the fire was of little consequence and the repairs were quickly and easily made”.
 
 
 
