--- a/src/app/content/sewy/depot.mdx
+++ b/src/app/content/sewy/depot.mdx
@@ -44,7 +44,7 @@ The decision was made eventually to build on a new location -- the location of t
 <LOCItem image="/loc/sewy/depot/map1924.jpg" caption="1924 map showing both depot locations." type="map" linkOut="https://www.loc.gov/resource/g4264lm.g097661924/?sp=1&st=image&r=0.07,0.153,0.57,0.396,0" alt="A colorized closeup of a map from 1924 showing both depot locations."/>
 
 
-The new hotel and depot, named the Thornburgh Hotel and Depot, were completed in 1924, and operated as a passenger depot for almost 60 years.
+The new hotel, named the Thornburgh Hotel, and depot were completed in 1924, and operated as a passenger depot for almost 60 years.
 
 The Laramie Railroad Depot Association now stewards the care of the historic Thornburgh Hotel and railroad depot. Four pieces of railroad equipment now sit in the Railroad Heritage Park now -- a caboose, bunk car, steam engine, and snowplow -- which is a combination of rolling stock that could have operated realistically at some point. The snowplow, as well as the depot itself, are listed on the National Register of Historic Places.
 
