knight mdx edits

--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -16,24 +16,25 @@ stickers: [{image: "/loc/sewy/knight/dino.png", title: "Photo of S.H. Knight's T
 ---
 
 
-Dr. Samuel H. Knight was a professor of geology at the University of Wyoming, and his name is attached to so many things -- the geology building itself, the science camp named after his honor in the Medicine Bow Mountains, and even a fossil.
+Dr. Samuel H. Knight was a professor of geology at the University of Wyoming, and his name is attached to so many things -- the geology building itself, the science camp named in his honor in the Medicine Bow Mountains, and even a fossil.
 
 Doc Knight came from a family of geologists - his father was also a professor at the university, and the state fossil of Wyoming was named after him, the Knightia, a freshwater fish that is the most commonly found fish fossil in the world.
 
-Known for his exciting lectures on geology, where he could draw both detailed diagrams on the chalkboards of geologic formations and a perfect circle.
+Knight was known for both his exciting lectures on geology, and the incredible chalkboard illustrations he would draw to accompany his lessons. He could create detailed diagrams of geologic formations and perfect circles.
 <LOCItem
   type="book"
   caption="Example of a geological drawing"
   image="/loc/sewy/knight/illo.jpg"
-  linkOut="https://www.loc.gov/resource/gdcmassbookdig.geologyofstonewa00morg/?sp=23&r=-0.06,-0.215,1.111,0.764,0"/>
+  linkOut="https://www.loc.gov/resource/gdcmassbookdig.geologyofstonewa00morg/?sp=23&r=-0.06,-0.215,1.111,0.764,0"
+  alt="A black and white geological drawing of various geological layers from Oklahoma to Canada"/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"As you can see here....", style:{outline:"bubble"}, position:{col:2, row:1}, size:{width:3, height:2}},
-    {type:"image", src: "/loc/sewy/knight/k1.png", position:{col:1, row:1}, size:{width:9, height:8}},
+    {type:"image", src: "/loc/sewy/knight/k1.png", alt:"A brightly colored comic of Dr. S.H. Knight drawing an elaborate geological sketch on the chalkboard.  His back is turned to the viewer.",position:{col:1, row:1}, size:{width:9, height:8}},
     {type:"text", src:"How the lava flow created this wavy-like...", style:{outline:"bubble"}, position:{col:6, row:3}, size:{width:3, height:2}},
-    {type:"image", src: "/loc/sewy/knight/lookingoutside.png", position:{col:2, row:10}, size:{width:4, height:7}},
+    {type:"image", src: "/loc/sewy/knight/lookingoutside.png", alt:"A colored comic of Dr. Knight looking out the window at the brightly colored Wyoming landscape.", position:{col:2, row:10}, size:{width:4, height:7}},
     {type:"text", src:"Well, why don't we just go see it for ourselves?", style:{outline:"none"}, position:{col:6, row:18}, size:{width:3, height:2}},
-    {type:"image", src: "/loc/sewy/knight/vehicle.png", position:{col:5, row:19}, size:{width:5, height:5}},
+    {type:"image", src: "/loc/sewy/knight/vehicle.png", alt:"A comic of Dr. Knight driving a yellow buggy with a dinosaur logo on the side. There are two passengers in the buggy and exhaust coming out the back.", position:{col:5, row:19}, size:{width:5, height:5}},
 ]}/>
 
 
@@ -42,32 +43,32 @@ He established the Wyoming Science Camp in 1925, a place where students could le
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"It’s so great to be learning geology out here in Wyoming.", style:{outline:"bubble"}, position:{col:2, row:1}, size:{width:6, height:3}},
-    {type:"image", src: "/loc/sewy/knight/k2.png", position:{col:1, row:2}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/knight/k2.png", alt:"A brightly colored scene showing Dr. Knight teaching in the Wyoming landscape. He is standing next to a chalkboard talking to a group of students seated on the floor. The group is in a large canyon.", position:{col:1, row:2}, size:{width:9, height:7}},
     {type:"text", src:"The rock formations are all exposed and easy to see", style:{outline:"bubble"}, position:{col:2, row:11}, size:{width:4, height:2}},
-    {type:"text", src:"Unlike on the east coast, where they’re covered by plants and forest floor.", style:{outline:"bubble"}, position:{col:6, row:13}, size:{width:4, height:3}},
-    {type:"image", src: "/loc/sewy/knight/rocksAtFeet.png", position:{col:1, row:14}, size:{width:4, height:7}},
+    {type:"text", src:"Unlike on the East Coast, where they’re covered by plants and forest floor.", style:{outline:"bubble"}, position:{col:6, row:13}, size:{width:4, height:3}},
+    {type:"image", src: "/loc/sewy/knight/rocksAtFeet.png", alt:"A colorful comic panel showing a pair of hiking boots on the canyon floor. The panel is from the perspective of a hiker looking down at their boots.", position:{col:1, row:14}, size:{width:4, height:7}},
     {type:"text", src:"And we have examples of all three kinds of rocks here –", style:{outline:"bubble"}, position:{col:5, row:18}, size:{width:4, height:3}},
-    {type:"image", src: "/loc/sewy/knight/valley.png", position:{col:1, row:22}, size:{width:9, height:7}},
+    {type:"image", src: "/loc/sewy/knight/valley.png", alt:"A brightly colored panel depicting a richly colored valley with canyons, lakes and a bright blue sky.", position:{col:1, row:22}, size:{width:9, height:7}},
     {type:"text", src:"Behind me you can even SEE an example of a glacial valley!", style:{outline:"bubble"}, position:{col:2, row:21}, size:{width:4, height:3}},
     {type:"text", src:"What more could you ask for?", style:{outline:"bubble"}, position:{col:7, row:29}, size:{width:4, height:3}},
 
     {type:"text", src:"Maybe air conditioning?", style:{outline:"bubble"}, position:{col:4, row:33}, size:{width:3, height:3}},
-    {type:"image", src: "/loc/sewy/knight/sweaty.png", position:{col:3, row:34}, size:{width:7, height:7}},
+    {type:"image", src: "/loc/sewy/knight/sweaty.png", alt:"A colorful comic panel showing three campers sitting on the ground outside their tent. One camper is sweating profusely under the shade of a tree. The camper is fanning themselves with a sheet of paper.", position:{col:3, row:34}, size:{width:7, height:7}},
     {type:"text", src:"Or even just a nice, strong breeze.", style:{outline:"bubble"}, position:{col:7, row:40}, size:{width:3, height:3}},
 ]}/>
 
 Eventually, the camp grew from tents to cabins, which Knight designed and built with the help of five students. To transport things to the camp, they got eleven Franklin cars, which they painted bright yellow with a dinosaur logo. Lecturers and students would come across the country to learn at the camp.
 
-<LOCItem image="/loc/sewy/knight/lodge.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=5"/>
-<LOCItem image="/loc/sewy/knight/class.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=8"/>
+<LOCItem image="/loc/sewy/knight/lodge.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=5" caption="South-view of Main Lodge" alt="A black and white photograph of a large log cabin set against a forest of trees. There are wooden stairs leading up into the cabin and shutters on the cabin windows."/>
+<LOCItem image="/loc/sewy/knight/class.jpg" type="pnp" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=8" caption="Interior of the Main Lodge" alt="A black and white photograph of the inside of a large wooden log cabin. There is a large tree in the middle of the cabin that comes up from the floor and through the roof. There are wooden chairs and tables in the cabin and a metal chimney."/>
 <LOCItem
   type="pnp"
-  caption="Classroom Building from east"
-  alt="black and white photograph of log building"
+  caption="East-view of classroom building"
+  alt="A black and white photograph of the Classroom building at the camp. The building is a wooden log cabin."
   image="/loc/sewy/knight/classroom.png"
   linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=13"/>
 
-Knight was an ardent educator - in his time, it is estimated that he taught over 13,000 students. And he was disappointed with the amount of fossils that would be extracted from Wyoming and sent out of the state -- so he acquired the Brontosaurus fossils and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork to construct the lifesize T-Rex out of copper plates that sit outside the building named after him.
+Knight was an ardent educator - thorughout his lifetime, it is estimated that he taught over 13,000 students. While working, he was often disappointed with the number of fossils excavated Wyoming and sent out of the state -- so he acquired a whole Brontosaurus and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork. He constructed the lifesize T-Rex that sits outside the Geological Museum out of copper plates. The building is also named after him.
 
 
-<LOCItem image="/loc/sewy/knight/knightbuilding.jpg" type="pnp" linkOut="https://www.loc.gov/resource/highsm.32798/?r=-0.032,-0.081,1.111,0.779,0"/>
+<LOCItem image="/loc/sewy/knight/knightbuilding.jpg" type="pnp" linkOut="https://www.loc.gov/resource/highsm.32798/?r=-0.032,-0.081,1.111,0.779,0" caption="Tyrannosaurus sculpture outside University of Wyoming’s Geological Museum" alt="A color photograph of  the large, sprawling brick S.H. Knight Geology Building at the Geological Museum. There is a giant sculpture of a T-Rex outside the building."/>
