--- a/src/app/content/sewy/lightPlant.mdx
+++ b/src/app/content/sewy/lightPlant.mdx
@@ -18,27 +18,27 @@ stickers: [{image: "/loc/sewy/lightPlant/complete.png", title: "Swan Lamp Comple
 Most parts of a city are intentionally built. Water doesn’t naturally flow to town, determined citizens have to identify a source and direct it there. Buildings are built, food is grown, and in 1885 , electricity was a thing that a town could invest in.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-   {type:"text", style:{outline: "none", margin:"12px", fontSize:"1rem", textAlign:"left"}, src:"Electricty affects parts of our lives that we don’t even think about nowadays.", position:{col:1, row:1}, size:{width:9, height:1}},
-    {type:"image", src:"/loc/sewy/lightPlant/electricity1.png",position:{col:1, row:3}, size:{width:9, height:8}},
+   {type:"text", style:{outline: "none", margin:"12px", fontSize:"1rem", textAlign:"left"}, src:"Electricity transforms parts of our lives that we don’t even think about nowadays.", position:{col:1, row:1}, size:{width:9, height:1}},
+    {type:"image", src:"/loc/sewy/lightPlant/electricity1.png", alt:"A brightly colored comic panel showing a woman, Vivian Li, standing in her kitchen with numerous electric appliances. The scene is green, with the electric appliances in the space highlighted in yellow. Vivian is standing at the electric stove, stirring a pot. The burner is yellow. The stove is next to the refrigerator, also in yellow. The fan, dishwasher, radio and toaster oven in the kitchen are also colored yellow.", position:{col:1, row:3}, size:{width:9, height:8}},
     {type:"text", src:"Not me. I love electricity.", style:{outline: "bubble"}, position:{col:3, row:3}, size:{width:3, height:2}},
     {type:"text", src:"You should try living without it for a day", style:{outline: "box", backgroundColor: "white"}, position:{col:6, row:5}, size:{width:3, height:1}},
     {type:"text", src:"No thanks!", style:{outline: "bubble"}, position:{col:5, row:8}, size:{width:2, height:1}},
-    {type:"text", src:"Chores are harder, like washing clothes, which had to be done by hand…", style:{outline: "box", backgroundColor: "white"}, position:{col:1, row:11}, size:{width:4, height:1}},
-    {type:"image", src:"/loc/sewy/lightPlant/electricity2.png",position:{col:1, row:12}, size:{width:4, height:8}},
+    {type:"text", src:"Chores were harder, like washing clothes, which had to be done by hand…", style:{outline: "box", backgroundColor: "white"}, position:{col:1, row:11}, size:{width:4, height:1}},
+    {type:"image", src:"/loc/sewy/lightPlant/electricity2.png", alt:"A brightly colored comic panel depicting Vivian washing her clothes by hand. There are bubbles  floating throughout the panel.", position:{col:1, row:12}, size:{width:4, height:8}},
     {type:"text", src:"But at least there were appliances for drying!", style:{outline: "box", backgroundColor: "white"}, position:{col:6, row:13}, size:{width:4, height:1}},
-    {type:"image", src:"/loc/sewy/lightPlant/electricity3.png",position:{col:5, row:14}, size:{width:5, height:8}},
-    {type:"text", src:"Which was hand powered.", style:{outline: "box", backgroundColor: "white"}, position:{col:6, row:22}, size:{width:4, height:1}},
-    {type:"image", src:"/loc/sewy/lightPlant/electricity4.png",position:{col:5, row:23}, size:{width:5, height:8}},
+    {type:"image", src:"/loc/sewy/lightPlant/electricity3.png", alt:"A brightly colored comic panel showing Vivian carrying a load of laundry towards a manual spin drying machine.", position:{col:5, row:14}, size:{width:5, height:8}},
+    {type:"text", src:"Which were hand powered.", style:{outline: "box", backgroundColor: "white"}, position:{col:6, row:22}, size:{width:4, height:1}},
+    {type:"image", src:"/loc/sewy/lightPlant/electricity4.png", alt:"A brightly colored comic panel illustrating Vivian using the manual spin drying machine.", position:{col:5, row:23}, size:{width:5, height:8}},
     {type:"text", src:"better than relying on the sun", style:{outline: "none", transform:"rotate(-3deg)"}, position:{col:6, row:24}, size:{width:2, height:1}},
 ]}/>
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
-    {type:"text", style:{outline:"box", backgroundColor: "white "},src:"And nights are just...", position:{col: 1, row:1}, size:{width:3, height:1}},
-    {type:"image", src:"/loc/sewy/lightPlant/night1.png", position:{col:1, row:1}, size:{width:9, height:6}},
-    {type:"image", src:"/loc/sewy/lightPlant/night2.png", position:{col:1, row:7}, size:{width:6, height:4}},
+    {type:"text", style:{outline:"box", backgroundColor: "white "},src:"And nights were just...", position:{col: 1, row:1}, size:{width:3, height:1}},
+    {type:"image", src:"/loc/sewy/lightPlant/night1.png", alt:"A comic panel showing a dark night sky, and a crescent moon peering out from a group of dark clouds.", position:{col:1, row:1}, size:{width:9, height:6}},
+    {type:"image", src:"/loc/sewy/lightPlant/night2.png", alt:"A comic panel completely blacked out except for a pair of eyes.", position:{col:1, row:7}, size:{width:6, height:4}},
     {type:"text", style:{outline:"none", color: "white",paddingLeft:"15px", fontSize:"2rem", textAlign:"left"},src:"SO. DARK.", position:{col: 1, row:8}, size:{width:1, height:2}},
-    {type:"image", src:"/loc/sewy/lightPlant/night3.png", position:{col:5, row:11}, size:{width:5, height:4}},
-    {type:"image", src:"/loc/sewy/lightPlant/night4.png", position:{col:3, row:16}, size:{width:7, height:8}},
+    {type:"image", src:"/loc/sewy/lightPlant/night3.png", alt:"A comic panel of a closeup of a match being struck and emitting a flame.", position:{col:5, row:11}, size:{width:5, height:4}},
+    {type:"image", src:"/loc/sewy/lightPlant/night4.png", alt:"A comic panel showing Vivian standing in the dark, and holding an oil lamp. She is looking down at the flame in the lamp.", position:{col:3, row:16}, size:{width:7, height:8}},
     {type:"text", style:{outline:"bubble", },src:"I can’t believe the solution to this was just carrying around fire.", position:{col: 3, row:16}, size:{width:4, height:2}},
     {type:"text", style:{outline:"bubble", },src:"Is that not a fire hazard??", position:{col: 8, row:17}, size:{width:2, height:2}},
      {type:"text", style:{outline:"box", backgroundColor:"white" },src:"It was.\nBuildings were burning down all the time", position:{col: 5, row:23}, size:{width:4, height:2}},
@@ -46,21 +46,21 @@ Most parts of a city are intentionally built. Water doesn’t naturally flow to 
 
 Cheyenne embraced electricity first in 1883 by lighting up part of its downtown. Not to be outdone, Laramie tried to contact the same company to add electricity - the Brush Swan Electric Company.
 
-<LOCItem image="/loc/sewy/lightPlant/cleveland.jpg" type="book" caption="Illustration of an arc lighting tower in Cleveland, Ohio. Arc lighting was so bright that it could be used to illuminate a whole city square." linkOut="https://www.loc.gov/resource/gdcscd.00337706836/?sp=6"/>
+<LOCItem image="/loc/sewy/lightPlant/cleveland.jpg" type="book" caption="Illustration of an arc lighting tower in Cleveland, Ohio. Arc lighting was so bright that it could be used to illuminate a whole city square." alt="A black and white illustration of a very tall lighting tower high above a town square and casting a bright light." linkOut="https://www.loc.gov/resource/gdcscd.00337706836/?sp=6"/>
 
 {/* <ComicSection/> */}
 
-The Brush Swan Electric Light Company used both arc and incandesent lights and helped cities set up with power plants and supplies.
+The Brush Swan Electric Light Company used both arc and incandescent lights and helped cities set up with power plants and supplies.
 However, they didn’t respond to Laramie’s request, and the Edison Company was the one who eventually brought power to the city.
 
-<LOCItem image="/loc/sewy/lightPlant/mill.jpg" type="book" linkOut="https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&clip=521,2106,1583,877&ciw=817&rot=0"/>
+<LOCItem image="/loc/sewy/lightPlant/mill.jpg" type="book" caption="Photo of the Laramie Light Plant" linkOut="https://www.loc.gov/resource/gdcmassbookdig.laramiewyomingin00webs/?sp=27&st=image&clip=521,2106,1583,877&ciw=817&rot=0" alt="A black and white image of the Laramie electric plant."/>
 
-The Laramie Light Plant was located at Clark and 3rd, and was powered by the water from the city springs. At first, the electricity being generated was limited to being used for light only, and the plant only ran at night. 
-After a while, factories were allowed to use the power, including the flour mill next door, which was the first in the world to be powered by electricity.
+The Laramie Light Plant was located at Clark and 3rd, and was powered by water from the city springs. At first, the electricity was only used to light the city, and the plant only ran at night.
+After a while, factories, including the flour mill next door, could use electricity to power their operations. This development made the flour mill the first in the world to be powered by electricity.
 
-<LOCItem  image="/loc/sewy/lightPlant/map.jpg" type="map" caption="1907 map of Laramie showing the mill next to the power plant." linkOut="https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.716,0.428,0.275,0"/>
+<LOCItem  image="/loc/sewy/lightPlant/map.jpg" type="map" caption="1907 map of Laramie showing the mill next to the power plant." linkOut="https://www.loc.gov/resource/g4264lm.g097661907/?sp=3&st=image&r=-0.007,0.716,0.428,0.275,0" alt="A colorized map showing the Laramie Light Plant and the mill next door."/>
 
-<LOCItem  image="/loc/sewy/lightPlant/whatwehave.jpg" type="book"  caption="Excerpt from a 1908 book highlighting the benefits of living in Laramie. Apart from its electric system, Laramie had a nice, dry climate, and “a score of secret societies”." linkOut="https://www.loc.gov/resource/gdcmassbookdig.albanycountywyo00wyom/?sp=4&r=-0.007,0.2,0.623,0.401,0"/>
+<LOCItem  image="/loc/sewy/lightPlant/whatwehave.jpg" type="book"  caption="Excerpt from a 1908 book highlighting the benefits of living in Laramie. Apart from its electric system, Laramie had a nice, dry climate, and “a score of secret societies”." linkOut="https://www.loc.gov/resource/gdcmassbookdig.albanycountywyo00wyom/?sp=4&r=-0.007,0.2,0.623,0.401,0" alt="A scan of pages in a book from 1908. The pages are yellowed with age and detail all the benefits of living in Laramie, including its electric system."/>
 
 Though the light plant was demolished in the 1970s, Laramie is still known as the Gem City on the Plains -- named such because of the glow it gave in the distance at night.
 
