--- a/src/app/content/sewy/libertyBell.mdx
+++ b/src/app/content/sewy/libertyBell.mdx
@@ -15,29 +15,29 @@ blurb: VVN TODO
 stickers: [{image: "/loc/sewy/libertyBell/poster.jpg", linkOut: "https://www.loc.gov/resource/ppmsca.50985/", title: "1917 poster from Liberty Loan"}, {image: "/loc/sewy/libertyBell/stereograph.jpg", linkOut: "https://www.loc.gov/resource/stereo.1s15233/", title: "1876 Stereograph"}, {image: "/loc/sewy/libertyBell/ringing.png", linkOut: "https://www.loc.gov/resource/music.muswwism-200210159/?sp=1&r=-0.261,0.099,1.553,1.068,0", title: "Sheet music, 'Our Liberty Bell'"}, {image: "/loc/sewy/libertyBell/bellSticker.png"}]
 ---
 
-Here in front of the Wyoming State Museum sits something surprising - the Liberty Bell! It is one of a set of 57 replicas that was created in the 1950s as a part of movement to get people across the United States to invest into savings bonds.
-<LOCItem image="/loc/sewy/libertyBell/poster.jpg" type="pnp" linkOut="https://www.loc.gov/resource/ppmsca.50985/"/>
-<LOCItem image="/loc/sewy/libertyBell/buybonds.jpg" type="pnp" linkOut="https://www.loc.gov/resource/ppmsca.18334/"/>
-It wasn’t the first time the image of the Liberty Bell was used in a campaign. During the Great War, the country needed to raise money to support the Allied cause. The government employed celebrities at the time, such as Charlie Chaplin, to encourage people to support the cause, but it was completely ineffective. So they turned to the Liberty Bell, and created a campaign around it: ringing the bell thirteen times for each of the original thirteen colonies, and having every other bell in the nation ringing at the same time.
+Here in front of the Wyoming State Museum sits something surprising - the Liberty Bell! It is one of a set of 57 replicas that were created in the 1950s as a part of a campaign to get people across the United States to invest into savings bonds.
+<LOCItem image="/loc/sewy/libertyBell/poster.jpg" type="pnp" caption="1917 poster persuading readers to buy Liberty Bonds" linkOut="https://www.loc.gov/resource/ppmsca.50985/" alt="A color poster asking readers to, “Buy a Liberty Bond”. The poster shows sailors and soldiers with the American flag in the background, holding a sign that reads, “ We Depend on You”. There are also images of Uncle Sam. In one image Uncle Sam holds a civilian business by the collar. The bottom of the poster reads, “ Your Money Must Wind the War.” "/>
+<LOCItem image="/loc/sewy/libertyBell/buybonds.jpg" type="pnp" caption="Design drawing for Liberty Bonds poster" linkOut="https://www.loc.gov/resource/ppmsca.18334/" alt="A color design drawing for a poster that shows the Statue of Liberty in ruins while New York City burns in flames in the background."/>
+It wasn’t the first time the image of the Liberty Bell was used in a campaign. During the World War I, the country needed to raise money to support the Allied cause. The government employed celebrities at the time, such as Charlie Chaplin, to encourage people to support the cause, but it was completely ineffective. So they turned to the Liberty Bell, and created a campaign around it: ringing the bell thirteen times for each of the original thirteen colonies, and having every other bell in the nation ringing at the same time.
 
-<LOCItem image="/loc/sewy/libertyBell/john.jpg" type="pnp" linkOut="https://www.loc.gov/item/2014705718/"/>
+<LOCItem image="/loc/sewy/libertyBell/john.jpg" type="pnp" caption="Photograph showing singer John McCormack selling Liberty Bonds" linkOut="https://www.loc.gov/item/2014705718/" alt="A black and white photograph of Irish American singer John McCormack seated at a desk selling Liberty Bonds to a crowd of people."/>
 
 With such a successful strategy, the United States invoked the bell's image again when they wanted to raise awareness for the Independence Bond Drive in May of 1950. This time, 57 full-sized replicas of the bell was forged in France. One was sent to each state, to be toured around in custom trucks, and finally arriving in each state’s respective capitol.
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"Alright, it's up to you now to sell some bonds!", position:{col:2, row:1}, size:{width:4, height:3}, style:{outline:"bubble",fontSize:"1rem"}},
     {type:"text", src:"okaaay...", position:{col:6, row:5}, size:{width:4, height:2}, style:{outline:"none",rotate:"-4deg"}},
-    {type:"image", src:"/loc/sewy/libertyBell/bell1.png", position:{col:2, row:3}, size:{width:8, height:7}},
+    {type:"image", src:"/loc/sewy/libertyBell/bell1.png", alt:"A comic illustration of the Liberty Bell looking unsure.", position:{col:2, row:3}, size:{width:8, height:7}},
     {type:"text", src:"sigh", position:{col:3, row:13}, size:{width:4, height:2}, style:{outline:"none",fontSize:"1rem",rotate:"-4deg"}},
     {type:"text", src:"I got this", position:{col:7, row:13}, size:{width:2, height:2}, style:{outline:"none",fontSize:"1rem",rotate:"4deg"}},
-    {type:"image", src:"/loc/sewy/libertyBell/bell2.png", position:{col:2, row:11}, size:{width:7, height:7}},
+    {type:"image", src:"/loc/sewy/libertyBell/bell2.png", alt:"A comic illustration of a close up of the Liberty Bell’s half smiling face.", position:{col:2, row:11}, size:{width:7, height:7}},
     {type:"text", src:"Hey!!! Do you wanna buy some savings bonds?", position:{col:4, row:16}, size:{width:4, height:3}, style:{outline:"bubble",fontSize:".9rem"}},
     {type:"text", src:"I promise they won't lose you money this time", position:{col:5, row:20}, size:{width:4, height:3}, style:{outline:"bubble",fontSize:".9rem"}},
-    {type:"image", src:"/loc/sewy/libertyBell/bell3.png", position:{col:1, row:18}, size:{width:5, height:7}},
+    {type:"image", src:"/loc/sewy/libertyBell/bell3.png", alt:"A comic illustration of the Liberty Bell with arms outstretched and an earnest look on its face. Sweat drops bounce off the bell’s face.", position:{col:1, row:18}, size:{width:5, height:7}},
     {type:"text", src:"I can't do it! I'm a fraud!", position:{col:3, row:26}, size:{width:2, height:2}, style:{outline:"none",fontSize:".8rem"}},
-    {type:"image", src:"/loc/sewy/libertyBell/bell4.png", position:{col:2, row:25}, size:{width:4, height:7}},
+    {type:"image", src:"/loc/sewy/libertyBell/bell4.png", alt:"A comic panel of the Liberty Bell sobbing with its hands on its face.", position:{col:2, row:25}, size:{width:4, height:7}},
     {type:"text", src:"Not a fraud. A *replica*.", position:{col:7, row:24}, size:{width:2, height:2}, style:{outline:"bubble",fontSize:".8rem"}},
-    {type:"image", src:"/loc/sewy/libertyBell/bell5.png", position:{col:6, row:25}, size:{width:4, height:7}},
+    {type:"image", src:"/loc/sewy/libertyBell/bell5.png", alt:"A comic illustration of the Liberty Bell standing with its arms hanging by its side and its face red from crying.", position:{col:6, row:25}, size:{width:4, height:7}},
     {type:"text", src:"It's different", position:{col:7, row:30}, size:{width:2, height:2}, style:{outline:"bubble",fontSize:".8rem"}},
 
 ]}/>
@@ -50,15 +50,15 @@ After debating the logistics of how best to transport a treasure across the coun
 
 <ComicSection cols={9} rowHeight="2rem" elements={[
     {type:"text", src:"Alright kids. This is a SPECIAL situation. I'm being serious -- ", position:{col:2, row:1}, size:{width:5, height:3}, style:{outline:"bubble",fontSize:"1rem"}},
-    {type:"image", src:"/loc/sewy/libertyBell/train1.png", position:{col:1, row:3}, size:{width:8, height:7}},
+    {type:"image", src:"/loc/sewy/libertyBell/train1.png", alt:"A comic illustration of a train conductor addressing a crowd of children.", position:{col:1, row:3}, size:{width:8, height:7}},
     {type:"text", src:"You can absolutely not, under **ANY** circumstances, ring the Liberty Bell.", position:{col:6, row:7}, size:{width:5, height:3}, style:{outline:"bubble",fontSize:"1rem"}},
-    {type:"image", src:"/loc/sewy/libertyBell/train2.png", position:{col:5, row:11}, size:{width:5, height:5}},
+    {type:"image", src:"/loc/sewy/libertyBell/train2.png",alt:"A comic illustration of two children with wide pleading eyes looking up." , position:{col:5, row:11}, size:{width:5, height:5}},
     {type:"text", src:"okay fine, you can **TOUCH** it. But without any extra force.", position:{col:2, row:15}, size:{width:5, height:3}, style:{outline:"bubble",fontSize:"1rem"}},
-    {type:"image", src:"/loc/sewy/libertyBell/train3.png", position:{col:1, row:17}, size:{width:9, height:9}},
+    {type:"image", src:"/loc/sewy/libertyBell/train3.png", alt:"A comic illustration of the train conductor with his hand on his hips and looking reluctantly down at a group of cheering children.", position:{col:1, row:17}, size:{width:9, height:9}},
     {type:"text", src:"YAYYYYY", position:{col:3, row:24}, size:{width:5, height:3}, style:{outline:"none",fontSize:"3rem", color:"black"}},
 ]}/>
 
-<LOCItem caption="photograph from 1917 bond drive." type="pnp" image="/loc/sewy/libertyBell/libertyBell.jpg" linkOut="https://www.loc.gov/resource/ppmsca.12933/"/>
+<LOCItem caption="Photograph from 1917 bond drive" type="pnp" image="/loc/sewy/libertyBell/libertyBell.jpg" linkOut="https://www.loc.gov/resource/ppmsca.12933/"/>
 
 {/* 
 Sticker template: 
